feat: updateFiles implemintation
test will be added in next commit.